--- a/res/layout/activity_my_credit.xml
+++ b/res/layout/activity_my_credit.xml
@@ -75,14 +75,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="right"
+            android:layout_marginRight="20dp"
             android:text="@string/credit2" />
 
         <TextView
             android:id="@+id/tvBalance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:gravity="right"
             android:text="@string/credit3" />
     </LinearLayout>
